Add Azerbaijani, Tamil and Polish languages to production

--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locale-config xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- https://developer.android.com/guide/topics/resources/app-languages -->
     <locale android:name="en-US"/>
-    <locale android:name="ar"/>
-    <locale android:name="de"/>
-    <locale android:name="es"/>
-    <locale android:name="in"/>
-    <locale android:name="it"/>
-    <locale android:name="ru"/>
-    <locale android:name="tr"/>
-    <locale android:name="uk"/>
-    <locale android:name="zh-Hans"/>
+    <locale android:name="ar"/> <!-- Arabic -->
+    <locale android:name="az"/> <!-- Azerbaijani -->
+    <locale android:name="de"/> <!-- German -->
+    <locale android:name="es"/> <!-- Spanish  -->
+    <locale android:name="in"/> <!-- Indonesian -->
+    <locale android:name="it"/> <!-- Italian -->
+    <locale android:name="pl"/> <!-- Polish -->
+    <locale android:name="ru"/> <!-- Russian -->
+    <locale android:name="ta"/> <!-- Tamil -->
+    <locale android:name="tr"/> <!-- Turkish -->
+    <locale android:name="uk"/> <!-- Ukrainian -->
+    <locale android:name="zh-Hans"/> <!-- Chinese (Simplified) -->
 </locale-config>
