Implement TCP exporter (pcap-over-ip)
It makes it possible to integrate PCAPdroid with other software

See #509

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,18 +5,21 @@
         <item>http_server</item>
         <item>pcap_file</item>
         <item>udp_exporter</item>
+        <item>tcp_exporter</item>
     </string-array>
     <string-array name="pcap_dump_modes_labels">
         <item>@string/no_dump</item>
         <item>@string/http_server</item>
         <item>@string/pcap_file</item>
         <item>@string/udp_exporter</item>
+        <item>@string/tcp_exporter</item>
     </string-array>
     <string-array name="pcap_dump_modes_descriptions">
         <item>@string/no_dump_info</item>
         <item>@string/http_server_info</item>
         <item>@string/pcap_file_info</item>
         <item>@string/udp_exporter_info</item>
+        <item>@string/tcp_exporter_info</item>
     </string-array>
 
     <string-array name="app_languages">
