Implement search and filter for the HTTP log

--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -25,9 +25,10 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/active_filter"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            android:layout_marginHorizontal="2dp"
             android:visibility="gone"
             app:singleSelection="true">
         </com.google.android.material.chip.ChipGroup>
