Show TLS decryption errors in HTTP log

--- a/app/src/main/res/layout/http_log_filter_activity.xml
+++ b/app/src/main/res/layout/http_log_filter_activity.xml
@@ -32,6 +32,39 @@
             android:layout_margin="15dp">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/decryption"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:labelFor="@id/decryption_error_group"
+                tools:visibility="visible"
+                android:layout_marginBottom="5dp"/>
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/decryption_error_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                tools:visibility="visible"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/decryption_error_chip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/error"/>
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/decryption_no_error_chip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_error"/>
+            </com.google.android.material.chip.ChipGroup>
+
+            <TextView
                 android:id="@+id/method_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
