--- a/app/src/main/res/menu/connection_details_menu.xml
+++ b/app/src/main/res/menu/connection_details_menu.xml
@@ -16,4 +16,41 @@
         android:orderInCategory="20"
         android:icon="@drawable/ic_navigate_next"
         app:showAsAction="always" />
+
+    <!-- Menu items for ConnectionOverview fragment -->
+    <item
+        android:id="@+id/copy_to_clipboard"
+        android:title="@string/copy_to_clipboard"
+        android:orderInCategory="30"
+        android:icon="@drawable/ic_content_copy"
+        app:showAsAction="ifRoom"
+        android:visible="false" />
+
+    <item
+        android:id="@+id/share"
+        android:title="@string/share"
+        android:orderInCategory="40"
+        android:icon="@drawable/ic_share"
+        app:showAsAction="ifRoom"
+        android:visible="false" />
+
+    <!-- Menu items for ConnectionPayload fragment -->
+    <item
+        android:id="@+id/display_as"
+        android:title="@string/display_as"
+        android:orderInCategory="50"
+        android:icon="@drawable/ic_short_text"
+        app:showAsAction="never"
+        android:visible="false">
+        <menu>
+            <group android:id="@+id/display_as_grp" android:checkableBehavior="single">
+                <item
+                    android:id="@+id/printable_text"
+                    android:title="@string/printable_text" />
+                <item
+                    android:id="@+id/hexdump"
+                    android:title="@string/hexdump" />
+            </group>
+        </menu>
+    </item>
 </menu>
