update ui: bottoni avvia ferma, info panel genral...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,29 +29,55 @@
             android:textStyle="bold"
             android:padding="16dp" />
 
-        <Button
-            android:id="@+id/startCaptureButton"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Avvia cattura" />
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="12dp">
 
-        <Button
-            android:id="@+id/stopCaptureButton"
-            android:layout_width="match_parent"
+            <Button
+                android:id="@+id/startCaptureButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Avvia"
+                android:layout_marginEnd="8dp"/>
+
+            <Button
+                android:id="@+id/stopCaptureButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Ferma"
+                android:layout_marginStart="8dp"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/infoConnectionsText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ferma cattura" />
+            android:text="Connessioni raccolte: -"
+            android:layout_marginTop="12dp"/>
+
+        <TextView
+            android:id="@+id/infoLastSyncText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ultimo sync: -"/>
+
+        <TextView
+            android:id="@+id/infoSyncStatusText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stato sync: -"/>
 
         <Button
             android:id="@+id/openDataButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Visualizza dati raccolti" />
-
-        <Button
-            android:id="@+id/openPcapdroidButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Apri PCAPdroid / Avvia cattura" />
 
         <View
             android:layout_width="match_parent"
