Implement HAR export of HTTP and WebSocket data
Implement the ability to export the HTTP log/a single HTTP request
to the HAR 1.2 format. The export happens in a separate thread to
avoid blocking the UI, with the ability to cancel.

WebSocket data is exported in the Chrome DevTools extension format.

See #184

--- a/app/src/main/res/menu/http_details_menu.xml
+++ b/app/src/main/res/menu/http_details_menu.xml
@@ -24,4 +24,10 @@
         android:icon="@drawable/ic_short_text"
         app:showAsAction="never"
         android:visible="false" />
+
+    <item
+        android:id="@+id/save_as_har"
+        android:title="@string/save_as_har"
+        android:orderInCategory="40"
+        app:showAsAction="never" />
 </menu>
